--- a/frontend/job-freelance-ui/angular.json
+++ b/frontend/job-freelance-ui/angular.json
@@ -21,15 +21,36 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              "src/favicon.ico",
+              "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/css/custom-bs.css",
+              "src/assets/css/jquery.fancybox.min.css",
+              "src/assets/css/bootstrap-select.min.css",
+              "src/assets/fonts/icomoon/style.css",
+              "src/assets/fonts/line-icons/style.css",
+              "src/assets/css/owl.carousel.min.css",
+              "src/assets/css/animate.min.css",
+              "src/assets/css/style.css"
+
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/jquery.min.js",
+              "src/assets/js/bootstrap.bundle.min.js",
+              "src/assets/js/isotope.pkgd.min.js",
+              "src/assets/js/stickyfill.min.js",
+              "src/assets/js/jquery.fancybox.min.js",
+              "src/assets/js/jquery.easing.1.3.js",
+              "src/assets/js/jquery.waypoints.min.js",
+              "src/assets/js/jquery.animateNumber.min.js",
+              "src/assets/js/owl.carousel.min.js",
+              "src/assets/js/bootstrap-select.min.js",
+              "src/assets/js/custom.js",
+              "src/assets/js/js",
+              "src/assets/js/vcd15cbe7772f49c399c6a5babf22c1241717689176015"
+            ]
           },
           "configurations": {
             "production": {
