--- a/backend/job_freelance_internal_db/src/main/resources/application.properties
+++ b/backend/job_freelance_internal_db/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=job_freelance
 #db
 spring.datasource.url=jdbc:mysql://localhost:3306/job_freelance?verifyServerCertificate=false&useSSL=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=create
